# framework-gpt

./: .pdm.toml  README.md  bigram.html  bigram_v2.html  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
framework_gpt/: _modidx.py  bigram.py  prepare.py
nbs/: 00_bigram.ipynb  00_bigram_dvc.ipynb  01_bigram_dvc.ipynb  01_bigram_v2.ipynb  dvc.yaml  index.ipynb  nbdev.yml
